--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>T.T Watches</title>
+    <title>Proyecto Relojes</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
-
 <body>
-
+    <header>
+        <a href="#Inicio">Inicio</a>
+        <a href="#relojes">Relojes</a>
+        <a href="#acerca">Acerca de</a>
+        <a href="Contactos">Contactanos</a>
+    </header>
 </body>
-
 </html>
