--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Relojes</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <a href="#Inicio">Inicio</a>
-        <a href="#relojes">Relojes</a>
-        <a href="#acerca">Acerca de</a>
-        <a href="Contactos">Contactanos</a>
-    </header>
+    <div class="fondo">
+        <div class="contenido">
+            <header>
+                <a href="#Inicio">Inicio</a>
+                <a href="#relojes">Relojes</a>
+                <a href="#acerca">Acerca de</a>
+                <a href="Contactos">Contactanos</a>
+            </header>
+        </div>
+    </div>
+    
 </body>
 </html>
