Agregando cajas con animacion y corrigiendo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Relojes</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <div class="fondo">
         <div class="contenido">
             <header>
@@ -15,8 +18,46 @@
                 <a href="#acerca">Acerca de</a>
                 <a href="Contactos">Contactanos</a>
             </header>
+            <div class="medio">
+                <div class="card">
+                    <div class="first-content">
+                        <span>Somos la empresa N°1 en venta de relojes en todo el l mundo </span>
+                    </div>
+                    <div class="second-content">
+                        <span>Somos especialista en relojes de alta gama </span>
+                    </div>
+
+                </div>
+                <div class="medio1">
+                    <div class="card1">
+                        <div class="first-content1">
+                            <span>Contamos con Sponsors del mas alto nivel</span>
+                        </div>
+                        <div class="second-content1">
+                            <span>Preguntelen a un tal Lionel Messi </span>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
+
         </div>
+
+
+
+
+
+
+
+
+
+
     </div>
-    
+
+
+
 </body>
+
 </html>
