--- a/index.html
+++ b/index.html
@@ -5,56 +5,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Relojes</title>
+    <script src="https://kit.fontawesome.com/2682593b7b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <div class="fondo">
-        <div class="contenido">
-            <header>
-                <a href="#Inicio">Inicio</a>
-                <a href="#relojes">Relojes</a>
-                <a href="#acerca">Acerca de</a>
-                <a href="Contactos">Contactanos</a>
-            </header>
-            <div class="medio">
-                <div class="card">
-                    <div class="first-content">
-                        <span>Somos la empresa N°1 en venta de relojes en todo el l mundo </span>
+
+    <div class="contenido">
+        <header>
+            <a href="#Inicio">Inicio</a>
+            <a href="#relojes">Relojes</a>
+            <a href="#acerca">Acerca de</a>
+            <a href="Contactos">Contactanos</a>
+        </header>
+        <div class="medio">
+            <div class="card">
+                <div class="first-content">
+                    <span>Somos la empresa N°1 en venta de relojes en todo el l mundo </span>
+                </div>
+                <div class="second-content">
+                    <span>Somos especialista en relojes de alta gama </span>
+                </div>
+
+            </div>
+            <div class="medio1">
+                <div class="card1">
+                    <div class="first-content1">
+                        <span>Contamos con Sponsors del mas alto nivel</span>
                     </div>
-                    <div class="second-content">
-                        <span>Somos especialista en relojes de alta gama </span>
+                    <div class="second-content1">
+                        <span>Preguntenle a un tal Lionel Messi </span>
                     </div>
+
 
                 </div>
-                <div class="medio1">
-                    <div class="card1">
-                        <div class="first-content1">
-                            <span>Contamos con Sponsors del mas alto nivel</span>
-                        </div>
-                        <div class="second-content1">
-                            <span>Preguntelen a un tal Lionel Messi </span>
-                        </div>
+            </div>
+        </div>
+        <div class="reloj">
+            <div class="tarjeta-1">
+                <h2>Chifrre Rouge Black Ultramatte</h2>
+                <div class="contenido-1" id="reloj-1">
 
-
-                    </div>
+                    <img src="Imagenes/reloj1.webp" alt="1" height="380" width="350">
+                </div>
+                <div class="footer">
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="tarjeta-1">
+                <h2>Cronógrafo Chifrre Rouge Black </h2>
+                <div class="contenido-1" id="reloj-2">
+                    <img src="Imagenes/reloj3.webp" alt="2" height="380" width="350">
+                </div>
+                <div class="footer">
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="tarjeta-1">
+                <h2>Chifrre Rouge Stainless Steel</h2>
+                <div class="contenido-1" id="reloj-3">
+                    <img src="Imagenes/reloj35.webp" alt="3" height="380" width="350">
+                </div>
+                <div class="footer">
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="tarjeta-1">
+                <h2>Dior Grand Soir</h2>
+                <div class="contenido-1" id="reloj-4">
+                    <img src="Imagenes/CD13352X1227_E01.webp" alt="3" height="380" width="350">
+                </div>
+                <div class="footer">
+                    <button>Comprar</button>
                 </div>
             </div>
 
 
         </div>
+        <div class="relojpiola">
+            <div class="omnitrix">
 
-
-
-
-
-
-
-
-
-
+                <div class="contenido-2">
+                    <img src="Imagenes/DALL·E 2024-11-16 19.15.09 - A futuristic wrist device inspired by alien technology, resembling a smartwatch but bulkier. The device has a circular interface with glowing green li.webp" alt="Omnitrix" height="500" width="470">
+                </div>
+                <h2>Omnitrix</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, quo! Expedita voluptas iusto iste, in ea recusandae quod cupiditate, quis magnam veniam enim dolore placeat aperiam ipsam nesciunt laborum? Dignissimos.</p>
+                <div class="footer-1">
+                    <button>Reservar</button>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
