agregando imagenes y pie de pagina(Parte de Tiago Celiz)

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="omnitrix">
 
                 <div class="contenido-2">
-                    <img src="Imagenes/DALL·E 2024-11-16 19.15.09 - A futuristic wrist device inspired by alien technology, resembling a smartwatch but bulkier. The device has a circular interface with glowing green li.webp" alt="Omnitrix" height="500" width="470">
+                    <img src="imagenes/alien.webp" alt="Omnitrix" height="500" width="470">
                 </div>
                 <h2>Omnitrix</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, quo! Expedita voluptas iusto iste, in ea recusandae quod cupiditate, quis magnam veniam enim dolore placeat aperiam ipsam nesciunt laborum? Dignissimos.</p>
@@ -96,6 +96,45 @@
                 </div>
             </div>
         </div>
+                <!--TIAGO CELIZ PARTE-->
+        <div class="pie">
+            <div>
+                <div>
+                <t>FUNDADOR:</t>
+                <n>Tiago Tomas Ormachea</n>
+            </div>
+            <div>
+                <t>COLABORADORES:</t>
+                <n>Pedro Dahud</n>
+                <n>Facundo Gonzalez</n>
+                <n>Tiago Celiz </n>
+            </div>
+            <div>
+                <t id="prove">PROVEEDORES:</t>
+
+                    <section id="slide">
+                        <a id="link" href="https://www.rolex.com/es">
+                            <img src="imagenes/logo_rolex.jpeg" alt="m1" height="100px" width="100px">
+                        </a>
+                        <a id="slide" href="https://www.gucci.com/es/es/">
+                            <img src="imagenes/logo_gucci.jpeg" alt="m2" height="100px" width="100px">
+                        </a>
+                        <a id="slide" href="https://www.dior.com/es_sam">
+                            <img src="imagenes/logo_dior.jpeg" alt="m3" height="100px" width="100px">
+                        </a>
+                        <a id="slide" href="https://www.dolcegabbana.com/es-es/">
+                            <img src="imagenes/dyg_logo.jpeg" alt="m4" height="100px" width="100px">
+                        </a>
+                    </section>
+            </div>
+                <t>CONTACTO PRINCIPAL:</t><br>
+                <a id="ig" href="https://www.instagram.com/t.t_watches?igsh=MW85YXpkNTNicjdlNw==">
+                <img  src="imagenes/imagenescontacto.jpeg" alt="m4" height="100px" width="100px">
+                </a>
+        </div>
+        </div>
+        </div>
+        <!--FIN PARTE TIAGO CELIZ-->
     </div>
 
 
