agregando nuevos index y dando toques finales

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <img src="Imagenes/reloj1.webp" alt="1" height="380" width="350">
                 </div>
                 <div class="footer">
-                    <button>Comprar</button>
+                    <button onclick="window.location.href='reloj1.html'">Comprar</button>
                 </div>
             </div>
             <div class="tarjeta-1">
@@ -59,7 +59,7 @@
                     <img src="Imagenes/reloj3.webp" alt="2" height="380" width="350">
                 </div>
                 <div class="footer">
-                    <button>Comprar</button>
+                    <button onclick="window.location.href='reloj2.html'">Comprar</button>
                 </div>
             </div>
             <div class="tarjeta-1">
@@ -68,7 +68,7 @@
                     <img src="Imagenes/reloj35.webp" alt="3" height="380" width="350">
                 </div>
                 <div class="footer">
-                    <button>Comprar</button>
+                    <button onclick="window.location.href='reloj3.html'">Comprar</button>
                 </div>
             </div>
             <div class="tarjeta-1">
@@ -87,10 +87,10 @@
             <div class="omnitrix">
 
                 <div class="contenido-2">
-                    <img src="imagenes/alien.webp" alt="Omnitrix" height="500" width="470">
+                    <img src="imagenes/omnitrix.webp" alt="Omnitrix" height="500" width="470">
                 </div>
                 <h2>Omnitrix</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, quo! Expedita voluptas iusto iste, in ea recusandae quod cupiditate, quis magnam veniam enim dolore placeat aperiam ipsam nesciunt laborum? Dignissimos.</p>
+                <p>Es el reloj mas piola que mas a ver en la vida,esta re piola.</p>
                 <div class="footer-1">
                     <button>Reservar</button>
                 </div>
