--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Relojes</title>
     <script src="https://kit.fontawesome.com/2682593b7b.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,16 +19,17 @@
         <header>
             <a href="#Inicio">Inicio</a>
             <a href="#relojes">Relojes</a>
+            <a href="#omnitrix">Omnitrix</a>
             <a href="#acerca">Acerca de</a>
             <a href="Contactos">Contactanos</a>
         </header>
-        <div class="medio">
+        <div class="medio" id="Inicio">
             <div class="card">
                 <div class="first-content">
                     <span>Somos la empresa N°1 en venta de relojes en todo el l mundo </span>
                 </div>
                 <div class="second-content">
-                    <span>Somos especialista en relojes de alta gama </span>
+                    <span>Somos especialistas en relojes de alta gama </span>
                 </div>
 
             </div>
@@ -42,7 +46,7 @@
                 </div>
             </div>
         </div>
-        <div class="reloj">
+        <div class="reloj" id="relojes">
             <div class="tarjeta-1">
                 <h2>Chifrre Rouge Black Ultramatte</h2>
                 <div class="contenido-1" id="reloj-1">
@@ -77,40 +81,38 @@
                     <img src="Imagenes/CD13352X1227_E01.webp" alt="3" height="380" width="350">
                 </div>
                 <div class="footer">
-                    <button>Comprar</button>
+                    <button onclick="window.location.href='reloj4.html'">Comprar</button>
                 </div>
             </div>
 
 
         </div>
-        <div class="relojpiola">
+        <div class="relojpiola" id="omnitrix">
             <div class="omnitrix">
 
                 <div class="contenido-2">
                     <img src="imagenes/omnitrix.webp" alt="Omnitrix" height="500" width="470">
                 </div>
-                <h2>Omnitrix</h2>
-                <p>Es el reloj mas piola que mas a ver en la vida,esta re piola.</p>
-                <div class="footer-1">
-                    <button>Reservar</button>
-                </div>
+                <p>EL OMNITRIX ES EL RELOJ MAS PIOLA QUE JAMÁS VERÁN TUS OJOS ES INCREIBLEMENTE PIOLA Y NUNCA LLEGARÁS A VER ALGO TAN PIOLA DENTRO DE MILLONES DE AÑOS. </p>
+                <p id="Lanzamiento">Lanzamiento: 07/07/77</p>
+
             </div>
         </div>
-                <!--TIAGO CELIZ PARTE-->
-        <div class="pie">
+        <!--TIAGO CELIZ PARTE-->
+        <div class="pie" id="acerca">
             <div>
                 <div>
-                <t>FUNDADOR:</t>
-                <n>Tiago Tomas Ormachea</n>
-            </div>
-            <div>
-                <t>COLABORADORES:</t>
-                <n>Pedro Dahud</n>
-                <n>Facundo Gonzalez</n>
-                <n>Tiago Celiz </n>
-            </div>
-            <div>
-                <t id="prove">PROVEEDORES:</t>
+                    <t>FUNDADOR:</t>
+                    <n>Tiago Tomas Ormachea</n>
+                </div>
+                <div>
+                    <t>COLABORADORES:</t>
+                    <n>Pedro Dahud</n>
+                    <n>Facundo Gonzalez</n>
+                    <n>Tiago Celiz </n>
+                </div>
+                <div>
+                    <t id="prove">PROVEEDORES:</t>
 
                     <section id="slide">
                         <a id="link" href="https://www.rolex.com/es">
@@ -126,15 +128,15 @@
                             <img src="imagenes/dyg_logo.jpeg" alt="m4" height="100px" width="100px">
                         </a>
                     </section>
-            </div>
+                </div>
                 <t>CONTACTO PRINCIPAL:</t><br>
                 <a id="ig" href="https://www.instagram.com/t.t_watches?igsh=MW85YXpkNTNicjdlNw==">
-                <img  src="imagenes/imagenescontacto.jpeg" alt="m4" height="100px" width="100px">
+                    <img src="imagenes/imagenescontacto.jpeg" alt="m4" height="100px" width="100px">
                 </a>
+            </div>
         </div>
-        </div>
-        </div>
-        <!--FIN PARTE TIAGO CELIZ-->
+    </div>
+    <!--FIN PARTE TIAGO CELIZ-->
     </div>
 
 
